setupStack.yml
AWSTemplateFormatVersion: 2010-09-09
Description: Setup 
Resources:
  Jenkins:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: ami-dff017b8
      InstanceType: t2.nano
      KeyName: ec2-test
      SecurityGroups:
        - !Ref JenkinsSecurityGroup
      UserData: !Base64 |
        #!/bin/bash -x
        yum update –y
        yum -y install git
        su - ec2-user <<EOF
        sudo yum install java-1.8.0 -y
        sudo yum remove java-1.7.0-openjdk -y
        sudo wget -O /etc/yum.repos.d/jenkins.repo http://pkg.jenkins-ci.org/redhat/jenkins.repo
        sudo rpm --import https://pkg.jenkins.io/redhat/jenkins.io.key
        sudo yum install jenkins -y
        sudo service jenkins start
        sudo iptables -t nat -A PREROUTING -i eth0 -p tcp --dport 80 -j REDIRECT --to-port 8080
        sleep 1m
        wget http://localhost:8080/jnlpJars/jenkins-cli.jar
        sudo mkdir /var/lib/jenkins/init.groovy.d
        sudo wget https://raw.githubusercontent.com/patnaikshekhar/JenkinsSalesforceSample/master/init.groovy -O /var/lib/jenkins/init.groovy.d/init.groovy
        sudo service jenkins restart
        sleep 1m
        java -jar jenkins-cli.jar -s http://localhost:8080/ install-plugin blueocean --username admin --password admin123
        sudo service jenkins restart
        sleep 1m
  JenkinsSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Jenkins Ingress
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
Outputs:
  HostName:
    Description: Host Name of instance where service is running
    Value: !GetAtt Jenkins.PublicDnsName
  InstanceId: 
    Description: Id of the running instance
    Value: !Ref Jenkins
